# rpc-wallet

./: Cargo.toml  README.md
src/: keys.rs  lib.rs  main.rs  manager.rs  wallet.rs
tests/: manager.rs  wallet.rs
tests/util/: rpc.rs
