[package]
name = "bdk-wallet"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bdk = { version = "^0.21", default-features = false, features = ["all-keys", "electrum", "key-value-db", "rpc"]}

